--- a/shik-quartz/src/main/resources/application.yml
+++ b/shik-quartz/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
   port: 9090
 spring:
   datasource:
-    url: jdbc:mysql://192.168.0.11:3306/shik?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/shik?characterEncoding=utf8&useSSL=false
     username: root
     password: QAZqazWSX
     driver-class-name: com.mysql.jdbc.Driver
